--- a/style.css
+++ b/style.css
@@ -167,11 +167,6 @@ button:disabled {
   }
 }
 
-.upper-container {
-  display: grid;
-  grid-template-columns: repeat(1fr 1fr 1fr);
-}
-
 .orbit {
   height: 75px;
   width: 75px;
@@ -458,4 +453,36 @@ button:disabled {
     opacity: 1;
   }
 }
-/* and we are done  */
+/* and we are done with the stars  */
+
+/* adding responsiveness to the application */
+
+@media (max-width: 480px) {
+  .container {
+    padding: 20px;
+    margin: 10px;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  input {
+    padding: 8px;
+    font-size: 0.9em;
+  }
+
+  #result {
+    font-size: 0.9em;
+  }
+
+  .planet-container {
+    position: fixed;
+    left: 45%;
+    top: 20%;
+  }
+
+  .planet-container * {
+    scale: 0.7;
+  }
+}
